c/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> header_declaration
Rule 7     header_declaration -> HASHTAG DEFINE ID NUMBER
Rule 8     header_declaration -> HASHTAG INCLUDE ID DOT ID
Rule 9     var_declaration -> type_specifier var_declaration2 SEMICOLON
Rule 10    var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 11    var_declaration2 -> ID COMMA var_declaration2
Rule 12    var_declaration2 -> ID
Rule 13    var_declaration2 -> ID EQUAL NUMBER COMMA var_declaration2
Rule 14    var_declaration2 -> ID EQUAL NUMBER
Rule 15    var_declaration2 -> TIMES ID COMMA var_declaration2
Rule 16    var_declaration2 -> TIMES ID
Rule 17    var_declaration2 -> ID EQUAL ID COMMA var_declaration2
Rule 18    var_declaration2 -> ID EQUAL ID
Rule 19    var_declaration2 -> COMMA
Rule 20    var_declaration2 -> TIMES TIMES ID
Rule 21    var_declaration2 -> TIMES TIMES ID COMMA var_declaration2
Rule 22    var_declaration2 -> AMPERSANT ID
Rule 23    var_declaration2 -> AMPERSANT ID COMMA var_declaration2
Rule 24    type_specifier -> INT
Rule 25    type_specifier -> VOID
Rule 26    type_specifier -> LONG
Rule 27    type_specifier -> SHORT
Rule 28    type_specifier -> DOUBLE
Rule 29    type_specifier -> FLOAT
Rule 30    type_specifier -> CHAR
Rule 31    type_specifier -> BOOLEAN
Rule 32    fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 33    params -> param_list
Rule 34    params -> VOID
Rule 35    param_list -> param_list COMMA param
Rule 36    param_list -> param
Rule 37    param_list -> empty
Rule 38    param -> type_specifier ID
Rule 39    param -> type_specifier ID LBRACKET RBRACKET
Rule 40    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 41    local_declarations -> local_declarations var_declaration
Rule 42    local_declarations -> empty
Rule 43    statement_list -> statement_list statement
Rule 44    statement_list -> empty
Rule 45    statement -> expression_stmt
Rule 46    statement -> compount_stmt
Rule 47    statement -> selection_stmt
Rule 48    statement -> iteration_stmt
Rule 49    statement -> return_stmt
Rule 50    expression_stmt -> expression SEMICOLON
Rule 51    expression_stmt -> SEMICOLON
Rule 52    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 53    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 54    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 55    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 56    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 57    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 58    iteration_stmt -> FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 59    return_stmt -> RETURN SEMICOLON
Rule 60    return_stmt -> RETURN expression SEMICOLON
Rule 61    expression -> var EQUAL expression
Rule 62    expression -> simple_expression
Rule 63    expression -> var EQUAL AMPERSANT ID
Rule 64    var -> ID
Rule 65    var -> ID LBRACKET expression RBRACKET
Rule 66    simple_expression -> additive_expression relop additive_expression
Rule 67    simple_expression -> additive_expression
Rule 68    relop -> LESS
Rule 69    relop -> LESSEQUAL
Rule 70    relop -> GREATER
Rule 71    relop -> GREATEREQUAL
Rule 72    relop -> DEQUAL
Rule 73    relop -> DISTINT
Rule 74    relop -> ISEQUAL
Rule 75    additive_expression -> additive_expression addop term
Rule 76    additive_expression -> term
Rule 77    additive_expression -> term MINUSMINUS
Rule 78    additive_expression -> term PLUSPLUS
Rule 79    addop -> PLUS
Rule 80    addop -> MINUS
Rule 81    term -> term mulop factor
Rule 82    term -> factor
Rule 83    mulop -> TIMES
Rule 84    mulop -> DIVIDE
Rule 85    factor -> LPAREN expression RPAREN
Rule 86    factor -> var
Rule 87    factor -> call
Rule 88    factor -> NUMBER
Rule 89    call -> ID LPAREN args RPAREN
Rule 90    args -> args_list
Rule 91    args -> empty
Rule 92    args_list -> args_list COMMA expression
Rule 93    args_list -> expression
Rule 94    empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 22 23 63
BOOLEAN              : 31
BREAK                : 55 56
CASE                 : 55
CHAR                 : 30
COLON                : 55 56
COMMA                : 11 13 15 17 19 21 23 35 92
DEFAULT              : 56
DEFINE               : 7
DEQUAL               : 72
DISTINT              : 73
DIVIDE               : 84
DOT                  : 8
DOUBLE               : 28
ELSE                 : 53
EQUAL                : 13 14 17 18 61 63
FLOAT                : 29
FOR                  : 58
GREATER              : 70
GREATEREQUAL         : 71
HASHTAG              : 7 8
ID                   : 7 8 8 10 11 12 13 14 15 16 17 17 18 18 20 21 22 23 32 38 39 63 64 65 89
IF                   : 52 53
INCLUDE              : 8
INT                  : 24
ISEQUAL              : 74
LBLOCK               : 40
LBRACKET             : 10 39 65
LESS                 : 68
LESSEQUAL            : 69
LONG                 : 26
LPAREN               : 32 52 53 54 57 58 85 89
MINUS                : 80
MINUSMINUS           : 77
NUMBER               : 7 10 13 14 55 88
PLUS                 : 79
PLUSPLUS             : 78
RBLOCK               : 40
RBRACKET             : 10 39 65
RETURN               : 59 60
RPAREN               : 32 52 53 54 57 58 85 89
SEMICOLON            : 9 10 50 51 55 56 58 58 59 60
SHORT                : 27
SWITCH               : 54
TIMES                : 15 16 20 20 21 21 83
VOID                 : 25 34
WHILE                : 57
error                : 

Nonterminals, with rules where they appear

additive_expression  : 58 66 66 67 75
addop                : 75
args                 : 89
args_list            : 90 92
call                 : 87
compount_stmt        : 32 46
declaration          : 2 3
declaration_list     : 1 2
empty                : 37 42 44 91
expression           : 50 52 53 57 58 60 61 65 85 92 93
expression_stmt      : 45
factor               : 81 82
fun_declaration      : 5
header_declaration   : 6
iteration_stmt       : 48
local_declarations   : 40 41
mulop                : 81
param                : 35 36
param_list           : 33 35
params               : 32
program              : 0
relop                : 66
return_stmt          : 49
selection_stmt       : 47
simple_expression    : 62
statement            : 43 52 53 53 54 55 56 57 58
statement_list       : 40 43
term                 : 75 76 77 78 81
type_specifier       : 9 10 32 38 39
var                  : 54 61 63 86
var_declaration      : 4 41
var_declaration2     : 9 11 13 15 17 21 23 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . header_declaration
    (9) var_declaration -> . type_specifier var_declaration2 SEMICOLON
    (10) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (32) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (7) header_declaration -> . HASHTAG DEFINE ID NUMBER
    (8) header_declaration -> . HASHTAG INCLUDE ID DOT ID
    (24) type_specifier -> . INT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . LONG
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . DOUBLE
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . CHAR
    (31) type_specifier -> . BOOLEAN

    HASHTAG         shift and go to state 16
    INT             shift and go to state 12
    VOID            shift and go to state 13
    LONG            shift and go to state 14
    SHORT           shift and go to state 15
    DOUBLE          shift and go to state 9
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 4
    BOOLEAN         shift and go to state 3

    var_declaration                shift and go to state 11
    declaration_list               shift and go to state 1
    header_declaration             shift and go to state 2
    program                        shift and go to state 5
    fun_declaration                shift and go to state 7
    declaration                    shift and go to state 8
    type_specifier                 shift and go to state 10

state 1

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . header_declaration
    (9) var_declaration -> . type_specifier var_declaration2 SEMICOLON
    (10) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (32) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (7) header_declaration -> . HASHTAG DEFINE ID NUMBER
    (8) header_declaration -> . HASHTAG INCLUDE ID DOT ID
    (24) type_specifier -> . INT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . LONG
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . DOUBLE
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . CHAR
    (31) type_specifier -> . BOOLEAN

    $end            reduce using rule 1 (program -> declaration_list .)
    HASHTAG         shift and go to state 16
    INT             shift and go to state 12
    VOID            shift and go to state 13
    LONG            shift and go to state 14
    SHORT           shift and go to state 15
    DOUBLE          shift and go to state 9
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 4
    BOOLEAN         shift and go to state 3

    var_declaration                shift and go to state 11
    header_declaration             shift and go to state 2
    fun_declaration                shift and go to state 7
    declaration                    shift and go to state 17
    type_specifier                 shift and go to state 10

state 2

    (6) declaration -> header_declaration .

    HASHTAG         reduce using rule 6 (declaration -> header_declaration .)
    INT             reduce using rule 6 (declaration -> header_declaration .)
    VOID            reduce using rule 6 (declaration -> header_declaration .)
    LONG            reduce using rule 6 (declaration -> header_declaration .)
    SHORT           reduce using rule 6 (declaration -> header_declaration .)
    DOUBLE          reduce using rule 6 (declaration -> header_declaration .)
    FLOAT           reduce using rule 6 (declaration -> header_declaration .)
    CHAR            reduce using rule 6 (declaration -> header_declaration .)
    BOOLEAN         reduce using rule 6 (declaration -> header_declaration .)
    $end            reduce using rule 6 (declaration -> header_declaration .)


state 3

    (31) type_specifier -> BOOLEAN .

    ID              reduce using rule 31 (type_specifier -> BOOLEAN .)
    TIMES           reduce using rule 31 (type_specifier -> BOOLEAN .)
    COMMA           reduce using rule 31 (type_specifier -> BOOLEAN .)
    AMPERSANT       reduce using rule 31 (type_specifier -> BOOLEAN .)


state 4

    (30) type_specifier -> CHAR .

    ID              reduce using rule 30 (type_specifier -> CHAR .)
    TIMES           reduce using rule 30 (type_specifier -> CHAR .)
    COMMA           reduce using rule 30 (type_specifier -> CHAR .)
    AMPERSANT       reduce using rule 30 (type_specifier -> CHAR .)


state 5

    (0) S' -> program .



state 6

    (29) type_specifier -> FLOAT .

    ID              reduce using rule 29 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 29 (type_specifier -> FLOAT .)
    COMMA           reduce using rule 29 (type_specifier -> FLOAT .)
    AMPERSANT       reduce using rule 29 (type_specifier -> FLOAT .)


state 7

    (5) declaration -> fun_declaration .

    HASHTAG         reduce using rule 5 (declaration -> fun_declaration .)
    INT             reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    LONG            reduce using rule 5 (declaration -> fun_declaration .)
    SHORT           reduce using rule 5 (declaration -> fun_declaration .)
    DOUBLE          reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    CHAR            reduce using rule 5 (declaration -> fun_declaration .)
    BOOLEAN         reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 8

    (3) declaration_list -> declaration .

    HASHTAG         reduce using rule 3 (declaration_list -> declaration .)
    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    LONG            reduce using rule 3 (declaration_list -> declaration .)
    SHORT           reduce using rule 3 (declaration_list -> declaration .)
    DOUBLE          reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    BOOLEAN         reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 9

    (28) type_specifier -> DOUBLE .

    ID              reduce using rule 28 (type_specifier -> DOUBLE .)
    TIMES           reduce using rule 28 (type_specifier -> DOUBLE .)
    COMMA           reduce using rule 28 (type_specifier -> DOUBLE .)
    AMPERSANT       reduce using rule 28 (type_specifier -> DOUBLE .)


state 10

    (9) var_declaration -> type_specifier . var_declaration2 SEMICOLON
    (10) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (32) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt
    (11) var_declaration2 -> . ID COMMA var_declaration2
    (12) var_declaration2 -> . ID
    (13) var_declaration2 -> . ID EQUAL NUMBER COMMA var_declaration2
    (14) var_declaration2 -> . ID EQUAL NUMBER
    (15) var_declaration2 -> . TIMES ID COMMA var_declaration2
    (16) var_declaration2 -> . TIMES ID
    (17) var_declaration2 -> . ID EQUAL ID COMMA var_declaration2
    (18) var_declaration2 -> . ID EQUAL ID
    (19) var_declaration2 -> . COMMA
    (20) var_declaration2 -> . TIMES TIMES ID
    (21) var_declaration2 -> . TIMES TIMES ID COMMA var_declaration2
    (22) var_declaration2 -> . AMPERSANT ID
    (23) var_declaration2 -> . AMPERSANT ID COMMA var_declaration2

    ID              shift and go to state 19
    TIMES           shift and go to state 18
    COMMA           shift and go to state 21
    AMPERSANT       shift and go to state 22

    var_declaration2               shift and go to state 20

state 11

    (4) declaration -> var_declaration .

    HASHTAG         reduce using rule 4 (declaration -> var_declaration .)
    INT             reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    LONG            reduce using rule 4 (declaration -> var_declaration .)
    SHORT           reduce using rule 4 (declaration -> var_declaration .)
    DOUBLE          reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    BOOLEAN         reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 12

    (24) type_specifier -> INT .

    ID              reduce using rule 24 (type_specifier -> INT .)
    TIMES           reduce using rule 24 (type_specifier -> INT .)
    COMMA           reduce using rule 24 (type_specifier -> INT .)
    AMPERSANT       reduce using rule 24 (type_specifier -> INT .)


state 13

    (25) type_specifier -> VOID .

    ID              reduce using rule 25 (type_specifier -> VOID .)
    TIMES           reduce using rule 25 (type_specifier -> VOID .)
    COMMA           reduce using rule 25 (type_specifier -> VOID .)
    AMPERSANT       reduce using rule 25 (type_specifier -> VOID .)


state 14

    (26) type_specifier -> LONG .

    ID              reduce using rule 26 (type_specifier -> LONG .)
    TIMES           reduce using rule 26 (type_specifier -> LONG .)
    COMMA           reduce using rule 26 (type_specifier -> LONG .)
    AMPERSANT       reduce using rule 26 (type_specifier -> LONG .)


state 15

    (27) type_specifier -> SHORT .

    ID              reduce using rule 27 (type_specifier -> SHORT .)
    TIMES           reduce using rule 27 (type_specifier -> SHORT .)
    COMMA           reduce using rule 27 (type_specifier -> SHORT .)
    AMPERSANT       reduce using rule 27 (type_specifier -> SHORT .)


state 16

    (7) header_declaration -> HASHTAG . DEFINE ID NUMBER
    (8) header_declaration -> HASHTAG . INCLUDE ID DOT ID

    DEFINE          shift and go to state 23
    INCLUDE         shift and go to state 24


state 17

    (2) declaration_list -> declaration_list declaration .

    HASHTAG         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    LONG            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    SHORT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    DOUBLE          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOLEAN         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 18

    (15) var_declaration2 -> TIMES . ID COMMA var_declaration2
    (16) var_declaration2 -> TIMES . ID
    (20) var_declaration2 -> TIMES . TIMES ID
    (21) var_declaration2 -> TIMES . TIMES ID COMMA var_declaration2

    ID              shift and go to state 25
    TIMES           shift and go to state 26


state 19

    (10) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (32) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt
    (11) var_declaration2 -> ID . COMMA var_declaration2
    (12) var_declaration2 -> ID .
    (13) var_declaration2 -> ID . EQUAL NUMBER COMMA var_declaration2
    (14) var_declaration2 -> ID . EQUAL NUMBER
    (17) var_declaration2 -> ID . EQUAL ID COMMA var_declaration2
    (18) var_declaration2 -> ID . EQUAL ID

    LBRACKET        shift and go to state 30
    LPAREN          shift and go to state 28
    COMMA           shift and go to state 27
    SEMICOLON       reduce using rule 12 (var_declaration2 -> ID .)
    EQUAL           shift and go to state 29


state 20

    (9) var_declaration -> type_specifier var_declaration2 . SEMICOLON

    SEMICOLON       shift and go to state 31


state 21

    (19) var_declaration2 -> COMMA .

    SEMICOLON       reduce using rule 19 (var_declaration2 -> COMMA .)


state 22

    (22) var_declaration2 -> AMPERSANT . ID
    (23) var_declaration2 -> AMPERSANT . ID COMMA var_declaration2

    ID              shift and go to state 32


state 23

    (7) header_declaration -> HASHTAG DEFINE . ID NUMBER

    ID              shift and go to state 33


state 24

    (8) header_declaration -> HASHTAG INCLUDE . ID DOT ID

    ID              shift and go to state 34


state 25

    (15) var_declaration2 -> TIMES ID . COMMA var_declaration2
    (16) var_declaration2 -> TIMES ID .

    COMMA           shift and go to state 35
    SEMICOLON       reduce using rule 16 (var_declaration2 -> TIMES ID .)


state 26

    (20) var_declaration2 -> TIMES TIMES . ID
    (21) var_declaration2 -> TIMES TIMES . ID COMMA var_declaration2

    ID              shift and go to state 36


state 27

    (11) var_declaration2 -> ID COMMA . var_declaration2
    (11) var_declaration2 -> . ID COMMA var_declaration2
    (12) var_declaration2 -> . ID
    (13) var_declaration2 -> . ID EQUAL NUMBER COMMA var_declaration2
    (14) var_declaration2 -> . ID EQUAL NUMBER
    (15) var_declaration2 -> . TIMES ID COMMA var_declaration2
    (16) var_declaration2 -> . TIMES ID
    (17) var_declaration2 -> . ID EQUAL ID COMMA var_declaration2
    (18) var_declaration2 -> . ID EQUAL ID
    (19) var_declaration2 -> . COMMA
    (20) var_declaration2 -> . TIMES TIMES ID
    (21) var_declaration2 -> . TIMES TIMES ID COMMA var_declaration2
    (22) var_declaration2 -> . AMPERSANT ID
    (23) var_declaration2 -> . AMPERSANT ID COMMA var_declaration2

    ID              shift and go to state 38
    TIMES           shift and go to state 18
    COMMA           shift and go to state 21
    AMPERSANT       shift and go to state 22

    var_declaration2               shift and go to state 37

state 28

    (32) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (33) params -> . param_list
    (34) params -> . VOID
    (35) param_list -> . param_list COMMA param
    (36) param_list -> . param
    (37) param_list -> . empty
    (38) param -> . type_specifier ID
    (39) param -> . type_specifier ID LBRACKET RBRACKET
    (94) empty -> .
    (24) type_specifier -> . INT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . LONG
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . DOUBLE
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . CHAR
    (31) type_specifier -> . BOOLEAN

    VOID            shift and go to state 40
    COMMA           reduce using rule 94 (empty -> .)
    RPAREN          reduce using rule 94 (empty -> .)
    INT             shift and go to state 12
    LONG            shift and go to state 14
    SHORT           shift and go to state 15
    DOUBLE          shift and go to state 9
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 4
    BOOLEAN         shift and go to state 3

    param_list                     shift and go to state 39
    empty                          shift and go to state 41
    param                          shift and go to state 42
    params                         shift and go to state 43
    type_specifier                 shift and go to state 44

state 29

    (13) var_declaration2 -> ID EQUAL . NUMBER COMMA var_declaration2
    (14) var_declaration2 -> ID EQUAL . NUMBER
    (17) var_declaration2 -> ID EQUAL . ID COMMA var_declaration2
    (18) var_declaration2 -> ID EQUAL . ID

    NUMBER          shift and go to state 45
    ID              shift and go to state 46


state 30

    (10) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 47


state 31

    (9) var_declaration -> type_specifier var_declaration2 SEMICOLON .

    INT             reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    VOID            reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    LONG            reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    SHORT           reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    DOUBLE          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    FLOAT           reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    CHAR            reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    BOOLEAN         reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    RBLOCK          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    SEMICOLON       reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    LBLOCK          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    IF              reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    SWITCH          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    CASE            reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    DEFAULT         reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    WHILE           reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    FOR             reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    RETURN          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    ID              reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    LPAREN          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    NUMBER          reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    HASHTAG         reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    $end            reduce using rule 9 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)


state 32

    (22) var_declaration2 -> AMPERSANT ID .
    (23) var_declaration2 -> AMPERSANT ID . COMMA var_declaration2

    SEMICOLON       reduce using rule 22 (var_declaration2 -> AMPERSANT ID .)
    COMMA           shift and go to state 48


state 33

    (7) header_declaration -> HASHTAG DEFINE ID . NUMBER

    NUMBER          shift and go to state 49


state 34

    (8) header_declaration -> HASHTAG INCLUDE ID . DOT ID

    DOT             shift and go to state 50


state 35
